<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">I Course</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="eg">eg; 015 Enter 1015</string>
    <string name="enter">Enter 1 Then The Course #</string>
    <string name="course_to_steer">Course To Steer</string>
    <string name="get_course"><font fgcolor= "#A62C23"></font> marks F and Z HAVE NO POSITION</string>
    <string name="edit_data">EditData</string>
    <string name="enter_data">Enter Data</string>
    <string name="edit_database">Edit Database</string>
    <string name="id">ID</string>
    <string name="course_no">Course No</string>
    <string name="course">Course</string>
    <string name="get_information">Get Information</string>
    <string name="enter_course_number"><font size="15">Enter Course Number</font></string>
    <string name="edittext_hint"><font size="15"> Hint here!</font></string>
    <string name="enter_course">Enter Course</string>
    <string name="add"> Add </string>
    <string name="delete_entry">Delete entry</string>
    <string name="edit_entry">Edit Entry</string>
    <string name="exit">Exit</string>
    <string name="data">Data</string>
    <string name="data_2">Data 2</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="action_edit">Edit</string>
    <string name="action_update_locations">Locations</string>
    <string name="action_sync">Sync</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="black">#000000</string>
    <string name="red">#ff0000</string>
    <string name="green">#2F4F2F</string>
    <string name="space"> </string>
    <string name="name">I Course</string>
    <string name="sync_dialog_text">Syncing...\n Please Wait</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_add">Add</string>
</resources>
