<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText 
        android:id="@+id/et_course_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:focusableInTouchMode="false" 
        android:hint="@string/enter_course_number" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/et_course_number"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/courseDropdown"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/colordropdown"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"/>

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >


        <Button
            android:id="@+id/addCourse"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/plus"
            android:onClick="onClick"/>
        
        <Button
            android:id="@+id/removeCourse"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/minus"
            android:onClick="onClick"/>
    </LinearLayout>

    <EditText
        android:id="@+id/et_course_details"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_border"
        android:layout_below="@+id/layout_button"
        android:gravity="top|left"
        android:inputType="textNoSuggestions|textMultiLine"
        android:padding="2dp"
        android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:focusableInTouchMode="false" />
    
    <LinearLayout
        android:id="@+id/layout_add_remove_bt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_course_details"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal" >


        <Button
            android:id="@+id/updateBt"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/update"
            android:onClick="onClick"/>
        
        <Button
            android:id="@+id/deleteBt"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/delete"
            android:onClick="onClick"/>
    </LinearLayout>
    
</RelativeLayout>