<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etSQLrowInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:hint="@string/enter_course_number"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/Course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSQLrowInfo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/course_to_steer"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:id="@+id/et_course_details"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_border"
        android:layout_below="@+id/Course"
        android:layout_above="@+id/bgetcourse"
        android:gravity="top|left"
        android:inputType="textNoSuggestions|textMultiLine"
        android:padding="2dp"
        android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:focusableInTouchMode="false" />

    <Button
        android:id="@+id/bgetcourse"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_above="@+id/btnMap"
        android:layout_marginTop="15dp"
        android:text="@string/get_course" />

    <Button
        android:id="@+id/btnMap"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="SHOW COURSE ON MAP" />

</RelativeLayout>
